--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,16 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
-    ext.nav_version = "2.1.0"
-    ext.room_version = "2.2.3"
+    ext.nav_version = "2.2.1"
+    ext.room_version = "2.2.4"
     ext.coroutines_version = "1.3.3"
     ext.kodein_version = "6.5.0"
-    ext.lifecycle_version = "2.1.0"
+    ext.lifecycle_version = "2.2.0"
     ext.retrofit_version = "2.6.1"
     ext.glide_version = "4.10.0"
     ext.preference_version = "1.1.0"
+    ext.preference_version = "1.1.0"
+    ext.groupie_version = "2.1.0"
 
     repositories {
         google()
@@ -17,7 +19,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
