repository and kodein setup

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,16 @@ android {
             buildConfigField('String', 'weather_api_key', weather_api_key)
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    // For Kotlin projects
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
 }
 
 dependencies {
