--- a/.github/workflows/test_build_upload.yml
+++ b/.github/workflows/test_build_upload.yml
@@ -36,7 +36,7 @@ jobs:
           name: dependency-updates
           path: build/dependencyUpdates
       - name: Upload APK
-        uses: actions/upload-artifact#v1
+        uses: actions/upload-artifact@v1
         with:
           name: build-output-apk
           path: app/build/outputs/apk/debug/app-debug.apk
