--- a/.github/workflows/test_build_upload.yml
+++ b/.github/workflows/test_build_upload.yml
@@ -25,7 +25,7 @@ jobs:
         with: 
           java-version: 1.8
       - name: Run unit Test
-        run: ./gradlew testDebugUnitTest
+        run: ./gradlew test
       - name: Build debug APK
         run: ./gradlew :app:assembleDebug --stacktrace
       - name: Check dependency updates
