--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,24 +8,20 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs"
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion = App.compileSdk
     defaultConfig {
-        applicationId "com.example.forecastify"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        applicationId = App.applicationId
+        minSdkVersion(App.minSdk)
+        targetSdkVersion(App.targetSdk)
+        versionCode = App.versionCode
+        versionName = App.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField('String', 'weather_api_key', weather_api_key)
+        buildConfigField('String', 'weatherApiKey', WEATHER_API_KEY)
     }
     buildTypes {
-        debug{
-            buildConfigField('String', 'weather_api_key', weather_api_key)
-        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField('String', 'weather_api_key', weather_api_key)
         }
     }
 
@@ -46,63 +42,61 @@ androidExtensions{
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation Libs.stdLib
+    implementation Libs.androidxAppcompat
+    implementation Libs.androidxCore
+    implementation Libs.constraintLayout
 
 //    navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation Libs.navigationFragment
+    implementation Libs.navigationUi
 
 //    room
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation Libs.roomRuntime
+    implementation Libs.androidxLegacy
+    kapt Libs.roomCompiler
 
     // ViewModel and LiveData
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation Libs.lifecycleExt
+    implementation Libs.lifecycleViewModel
+    kapt Libs.lifecycleCompiler
 
 //    coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation Libs.coroutinesCore
+    implementation Libs.coroutinesAndroid
 
 //    gson
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation Libs.gson
 
 //    retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation Libs.retrofit
+    implementation Libs.retrofitGsonConverter
 
 //    kodein
-    implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
-    implementation "org.kodein.di:kodein-di-framework-android-support:$kodein_version"
+    implementation Libs.kodeinGeneric
+    implementation Libs.kodeinFramework
 
 //    datetime support
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+    implementation Libs.dateTimeSupport
 
 //    glide
-    implementation "com.github.bumptech.glide:glide:$glide_version"
-    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    implementation Libs.glide
+    kapt Libs.glideCompiler
 
 //    groupie
-    implementation "com.xwray:groupie:$groupie_version"
-    implementation "com.xwray:groupie-kotlin-android-extensions:$groupie_version"
+    implementation Libs.groupie
+    implementation Libs.groupieExt
 
 //    preference
-    implementation "androidx.preference:preference-ktx:$preference_version"
+    implementation Libs.preference
 
-    implementation "com.google.android.gms:play-services-location:17.0.0"
-    implementation "com.google.android.material:material:1.1.0"
+    implementation Libs.location
+    implementation Libs.material
 
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation Libs.coroutinesAdapter
 
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation TestLibs.junit
+    androidTestImplementation TestLibs.junitExt
+    androidTestImplementation TestLibs.espressoCore
 }
