added hilt dependency.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,9 @@ dependencies {
 
     implementation Libs.coroutinesAdapter
 
+    implementation Libs.hiltAndroid
+    kapt Libs.hiltCompiler
+
 
     testImplementation TestLibs.junit
     androidTestImplementation TestLibs.junitExt
